fix: New Review form height doesn't stretch to fill out leftover vertical space in <li> when very long reviews exist on the same row

--- a/css/styles.css
+++ b/css/styles.css
@@ -647,6 +647,8 @@ input[name="mark-as-favorite"] {
 
 .reviews-list li:last-child {
     margin-bottom: 0;
+		display: flex;
+		flex-flow: column;
 }
 
 /*.reviews-list::after {
@@ -685,8 +687,10 @@ input[name="mark-as-favorite"] {
 
 
 #new-review {
-   display: grid; 
-   grid-template-columns: 1fr 1fr; 
+		flex: 1;
+    display: grid; 
+    grid-template-columns: 1fr 1fr; 
+		grid-template-rows: auto auto auto 1fr auto;
 }
 
 #new-review label {
@@ -751,6 +755,7 @@ label[for="new-review-text"] {
 		grid-column: 1 / 3;
 	  padding: 18px 25px;
 		margin-bottom: 40px;
+		border-width: 1px 0;
 }
 
 #new-review button {
